# open-aircraft-tracker

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  test_cli.py
open_aircraft_tracker/: aircraft_tracker.py  cli.py  main.py
open_aircraft_tracker/api/: adsbexchange.py  airlabs.py  aviationstack.py  base.py  flightaware.py  flightradar24.py  mock.py  opensky.py
open_aircraft_tracker/display/: radar.py
open_aircraft_tracker/utils/: logging.py  sound.py
tests/: test_aircraft.py  test_mock_api.py
