[tool.poetry]
name = "open-aircraft-tracker"
version = "0.1.0"
description = "Track aircraft near your location with a terminal-based radar display"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
repository = "https://github.com/thomaschristory/open-aircraft-tracker"
license = "MIT"
packages = [{include = "open_aircraft_tracker"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
geopy = "^2.4.1"
blessed = "^1.20.0"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.3"

[tool.poetry.group.dev.dependencies]
simpleaudio = "^1.0.4"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[tool.poetry.scripts]
aircraft-tracker = "open_aircraft_tracker.cli:main"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
